# outward-assembly

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  automate_assembly.py  default_adapters.fasta  example_normal_assembly.py  normal_assembly.py  oa_tools_env.yml  oa_tools_lock.yml  outward_assembly_env.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm_details.md  installation.md  usage.md
nextflow/: create_config.sh  main.nf  static_configs.config
nextflow/config/: containers.config  logging.config  profiles.config  resources.config
nextflow/docker/: Dockerfile
outward_assembly/: README.md  __init__.py  actions.py  basic_seq_operations.py  decision_manager.py  dedup.py  execution_state.py  io_helpers.py  kmer_freq_filter.py  overlap_graph.py  pipeline.py  pipeline_steps.py  strategy.py  strategy_helper.py
tests/: conftest.py  test_basic_seq_operations.py  test_dedup.py  test_io_helpers.py  test_overlap_graph.py
tests/data/pipeline-end-to-end/: fake_adapters.fasta  fake_config.yaml  fake_hfk.fasta  fake_input_data.csv  fake_warm_start.fasta  multi_seed_seq.fasta  ref_genome.fasta  seed_seq.fasta
tests/data/read-filtering/: fake_contigs.fasta
tests/integration/: test_kmer_counting.py  test_pipeline.py  test_pipeline_steps.py  test_subset_reads.py
tests/unit_tests/: test_actions.py  test_decision_manager.py  test_pipeline_metrics.py
