[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outward_assembly"
version = "0.1.0"
description = "Assembly tool for growing contigs outward from a seed sequence"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["outward_assembly"]
